Added some configuration fixes.